Trying to figure out Auth0

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Domain": "dev-fmo9aa35.us.auth0.com",
+    "Audience": "https://silveraide/",
+    "ClientId": "Pv1JpQeiYniCehoaIfBMH8NMTjzG7kHm"
+  }
 }
